         are more Retroarch cores with this feature.

         See https://github.com/libretro/mame2003-libretro/pull/348
         See https://github.com/libretro/mame2003-plus-libretro/pull/8
         See https://github.com/libretro/mame2010-libretro/pull/123
         See https://github.com/libretro/mame2010-libretro/tree/master/metadata

[B]Advanced MAME Launcher | version 1.0.0 | xx August 2020[/B]

FEATURE  [CORE] Port the addon to Kodi Matrix and Python 3.

WIP      [DOCS] Improve the AML wiki in Github and move documentation from Kodi forum to
         Github wiki.


[B]Advanced MAME Launcher | version 0.10.0 | xx August 2020[/B]

FEATURE  [CORE] Big code refactoring to prepare Kodi Python API changes.

FEATURE  [CORE] Include Software Lists that have no associated MAME machines in "Machines
         by Software List" filter.

FEATURE  [CORE] Create branch python2 and place series 0.10.x into this branch.

FEATURE  [CORE] Support Retroarch MAME 2003 Plus.

FEATURE  [FILTERS] Implement filtering options NoMissingROMs, NoMissingCHDs and NoMissingSamples.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2964109#pid2964109

FEATURE  [CORE] Different colours for different filters in the root window.

FEATURE  [CORE] In the Setup Plugin CM, Build Fanarts and 3D boxes: add an option to
         build all the Fanarts and 3D boxes at once.

FEATURE  [CORE] Reorganised the Setup Plugin context menu a bit.

FEATURE  [CORE] Export MAME info with billyc999s XML format.

FEATURE  [CORE] New Utility "Show machines with biggest ROMs"

FEATURE  [CORE] New Utility "Show machines with smallest ROMs"

FEATURE  [CORE] Disable Kodi screensaver when launching MAME and reenable after MAME finishes.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2934194#pid2934194

FIX      [CORE] Fixed crash when creating ROM audit database when MAME CHD set was SPLIT.
         See https://forum.kodi.tv/showthread.php?tid=304186&pid=2975566#pid2975566

