@@ -66,15 +66,21 @@ WIP      Retroarch core MAME 2003 Plus allows to save the MAME XML file needed b
          See https://github.com/libretro/mame2010-libretro/pull/123
          See https://github.com/libretro/mame2010-libretro/tree/master/metadata
 
-[B]Advanced MAME Launcher | version 1.0.0 | xx August 2020[/B]
 
-FEATURE  [CORE] Port the addon to Kodi Matrix and Python 3.
+[B]Advanced MAME Launcher | version 1.0.1 | xx xxxxxx 2021[/B]
 
 WIP      [DOCS] Improve the AML wiki in Github and move documentation from Kodi forum to
          Github wiki.
 
 
-[B]Advanced MAME Launcher | version 0.10.0 | xx August 2020[/B]
+[B]Advanced MAME Launcher | version 1.0.0 | xx November 2020[/B]
+
+FEATURE  [CORE] Port the addon to Kodi Matrix and Python 3.
+
+FEATURE  [CORE] xbmc.translatePath is deprecated in Matrix, use xbmcvfs.translatePath instead.
+
+
+[B]Advanced MAME Launcher | version 0.10.0 | xx November 2020[/B]
 
 FEATURE  [CORE] Big code refactoring to prepare Kodi Python API changes.
 
